Changes in the Cubes
====================

0.10
====

Quick Summary
-------------

* Dimension defition can have a "template". For example:

  {
      "name": "contract_date",
      "template": "date"
  }
* added table_rows() and cross_table()
* Incompatibilities:*  use `create_model()` instead of `Model(**dict)`, if you
  were using just `load_model()`, you are fine.

New Features
------------

* To address issue #8 create_model(dict) was added as replacement for
  Model(**dict). Model() from now on will expect correctly constructed model
  objects. `create_model()` will be able to handle various simplifications and
  defaults during the construction process.
* added `info` attribute to all model objects. It can be used to store custom,
  application or front-end specific information
* preliminary implementation of `cross_table()` (interface might be changed)
* `AggregationResult.table_rows()` - new method that iterates through
  drill-down rows and returns a tuple with key, label, path, and rest of the
  fields.
* dimension in model description can specify another template dimension – all
  properties from the template will be inherited in the new dimension. All
  dimension properties specified in the new dimension completely override the
  template specification
* added point_cut_for_dimension

*Slicer Server:*

* `/cell` – return cell details (replaces `/details`)

Changes
-------
* creation of a model from dictionary through Model(dict) is depreciated, use
  create_model(dict) instead. All initialization code will be moved there.
  Depreciation warnings were added. Old functionality retained for the time
  being. (**important**)
* Replaced Attribute.full_name() with Attribute.ref()
* Removed Dimension.attribute_reference() as same can be achieved with
  dim(attr).ref()
* AggregationResult.drilldown renamed to AggregationResults.cells

Planned Changes:

* str(Attribute) will return ref() instead of attribute name as it is more
  useful
  
Fixes
-----
