@@ -50,9 +50,9 @@ copyright = u'2010-2012, Stefan Urbanek'
 #
 # The short X.Y version.
 # import cubes
-version = '0.9'
+version = '0.10'
 # The full version, including alpha/beta/rc tags.
-release = '0.9.1'
+release = '0.10'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
